--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -322,7 +322,7 @@ section.split-row {
     top: 0;
     height: 100vh;
     width: 100%;
-    background: $transluscent-bg;
+    background: $transluscent-black;
   }
   
   .mask {
