--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,8 +10,9 @@ $breakpoint-desktop: 1024px;
 $emphasis-font: 'Roboto Condensed', sans-serif;
 $header-font: 'PT Serif', serif;
 $topbar-height: 10;
-$transluscent-bg: rgba(16, 17, 20, 0.8);
-$almost-transluscent-bg: rgba(16, 17, 20, 0.3);
+$transluscent-white: #F0EFEFB5;
+$transluscent-black: rgba(16, 17, 20, 0.8);
+$almost-transluscent-black: rgba(16, 17, 20, 0.3);
 
 $blue: #003865;
 
