--- a/styles/index.css
+++ b/styles/index.css
@@ -894,33 +894,12 @@ main {
 }
 
 #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides [data-slide="0"] {
-  background-image: url(/assets/Banner_Images/construct.png) !important;
-}
-
-#home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides [data-slide="1"] {
-  background-image: url(/assets/Banner_Images/loan.png) !important;
-}
-
-#home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides [data-slide="2"] {
-  background-image: url(/assets/Banner_Images/Fixed_deposit.png) !important;
-}
-
-#home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides [data-slide="3"] {
-  background-image: url(/assets/Banner_Images/Diaspora.png) !important;
+  background-image: url(/assets/banner.png) !important;
 }
 
 #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container {
   width: 100vw;
   height: 100%;
-  background-image: url(/assets/banner.png);
-  background-size: cover;
-  background-position: -35rem;
-}
-
-@media screen and (min-width: 760px) {
-  #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container {
-    background-position: center;
-  }
 }
 
 #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container .banner-slide {
@@ -1001,6 +980,10 @@ main {
 
 #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container .banner-slide .banner-slide-description-container .banner-slide-description #banner-large-text {
   color: #003865;
+}
+
+#home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container .banner-slide .banner-slide-description-container .banner-slide-description #banner-small-text {
+  color: #fff;
 }
 
 #home-banner-section-wrapper #banner-section .banner-slides-container .banner-slides .banner-slide-container .banner-slide .banner-slide-description-container .banner-slide-description #banner-button:hover {
