--- a/styles/index.scss
+++ b/styles/index.scss
@@ -31,31 +31,12 @@ main {
   
 
       [data-slide="0"] {
-        background-image: url(/assets/Banner_Images/construct.png) !important;
-      }
-
-      [data-slide="1"] {
-        background-image: url(/assets/Banner_Images/loan.png) !important;
-      }
-
-      [data-slide="2"] {
-        background-image: url(/assets/Banner_Images/Fixed_deposit.png) !important;
-      }
-      
-      [data-slide="3"] {
-        background-image: url(/assets/Banner_Images/Diaspora.png) !important;
+        background-image: url(/assets/banner.png) !important;
       }
 
       .banner-slide-container {
         width: 100vw;
         height: 100%;
-        background-image: url(/assets/banner.png);
-        background-size: cover;
-        background-position: -35rem;
-        
-        @include minWidth($breakpoint-tablet) {
-          background-position: center;
-        }
   
         .banner-slide {
           min-width: 100vw;
@@ -105,6 +86,11 @@ main {
       
               #banner-large-text {
                 color: $primary-color;
+                // font-weight: bold; // ::remove later::
+              }
+
+              #banner-small-text {
+                color: $white;
               }
 
               #banner-button:hover {
