--- a/styles/index.scss
+++ b/styles/index.scss
@@ -29,14 +29,21 @@ main {
       height: 100%;
       overflow: hidden;
   
+      .banner-position {
+        background-size: cover;
+        background-position: center;
+      }
 
       [data-slide="0"] {
-        background-image: url(/assets/banner.png) !important;
+        @extend .banner-position;
+        background-image: url(/assets/banner.png);
       }
 
       .banner-slide-container {
         width: 100vw;
         height: 100%;
+        background-size: cover;
+        background-position: center;
   
         .banner-slide {
           min-width: 100vw;
