--- a/styles/index.scss
+++ b/styles/index.scss
@@ -179,6 +179,8 @@ main {
 }
 
 #beneficiaries-section {
+  background: $transluscent-white;
+  
   .beneficiaries-list {
     display: flex;
     justify-content: center;
