--- a/styles/index.css
+++ b/styles/index.css
@@ -774,7 +774,7 @@ section.split-row.reverse {
   width: 100%;
   border: none;
   border-bottom: 2px solid #B98036;
-  margin: 1rem 0;
+  margin: 1rem;
   padding: 1rem 1.5rem;
 }
 
