--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -266,7 +266,7 @@ section.split-row {
         width: 100%;
         border: none;
         border-bottom: 2px solid #B98036;
-        margin: 1rem 0;
+        margin: 1rem;
         padding: 1rem 1.5rem;
       }
 
