--- a/styles/index.scss
+++ b/styles/index.scss
@@ -180,7 +180,7 @@ main {
 
 #beneficiaries-section {
   background: $transluscent-white;
-  
+
   .beneficiaries-list {
     display: flex;
     justify-content: center;
@@ -256,6 +256,7 @@ main {
 
     .right {
       .video-container {
+        width: 100%;
         iframe {
           box-shadow: 0px 0px 4px -1px #272727;
           border-radius: 8px;
@@ -278,8 +279,60 @@ main {
   text-align: center;
   display: flex;
   justify-content: center;
-  width: 100%;
-  height: 35rem;
+  // width: 100%;
+  width: max-content;
+
+  %svg-image {
+    border: 2px solid black;
+    border-radius: 50%;
+    background: $secondary-color;
+  }
+
+  %positioned-svg-image {
+    @extend %svg-image;
+    position: absolute;
+  }
+
+  .main-image {
+    @extend %svg-image;
+    height: 15rem;
+    width: 15rem;
+
+    .top-right {
+      @extend %positioned-svg-image;
+      height: 8rem;
+      width: 8rem;
+      top: -2rem;
+      right: -2rem;
+    }
+
+    .bottom-right {
+      @extend %positioned-svg-image;
+      height: 6rem;
+      width: 6rem;
+      bottom: -1rem;
+      right: -1rem;
+    }
+
+    @include minWidth($breakpoint-tablet) {
+      height: 20rem;
+      width: 20rem;
+
+      .top-right {
+        height: 12rem;
+        width: 12rem;
+        top: -4rem;
+        right: -4rem;
+      }
+
+      .bottom-right {
+        height: 10rem;
+        width: 10rem;
+        bottom: -3rem;
+        right: -3rem;
+      }
+    }
+  }
 
   .svg-part {
     width: 12rem;
@@ -322,8 +375,8 @@ main {
   }
   
   @include minWidth($breakpoint-tablet) {
-    height: unset;
-    width: 25rem;
+    // height: unset;
+    // width: 25rem;
 
     .svg-part {
       width: 15rem;
@@ -345,7 +398,7 @@ main {
   }
   
   @include minWidth($breakpoint-desktop) {
-    width: 40rem;
+    // width: 40rem;
     
     .svg-part {
       width: 17rem;
